--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="fill_parent"
-    android:weightSum="1" android:layout_width="fill_parent" android:baselineAligned="true" android:orientation="vertical">
-    <TextView android:textAppearance="?android:attr/textAppearanceMedium" 
-    	android:id="@+id/TextView1" android:layout_width="fill_parent" 
-    	android:text="@string/text" android:layout_height="fill_parent" 
-    	android:gravity="center" android:editable="false" android:onClick="onClick"></TextView>
+    android:weightSum="1" android:layout_width="fill_parent" 
+    android:baselineAligned="true" android:orientation="horizontal" android:background="@color/background_color" android:gravity="center" android:padding="5px">
+    
+
+            <LinearLayout
+                android:id="@+id/Wrap"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:orientation="vertical" android:padding="1px" android:background="@color/border_color">
+                <TextView android:textAppearance="?android:attr/textAppearanceMedium" 
+                	android:id="@+id/TextView1" 
+                	android:editable="false" 
+                	android:onClick="onClick" android:text="@string/text" android:clickable="false" 
+                	android:textColor="@color/text_color" 
+                	android:textColorHighlight="@color/text_color" android:gravity="center|center_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/text_background_color" android:shadowColor="#444" android:shadowRadius="0"></TextView>
+            </LinearLayout>
+
+    
 </LinearLayout>
