--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,14 +9,14 @@
         android:layout_height="fill_parent"
         android:weightSum="1" android:layout_width="fill_parent" 
         android:baselineAligned="true" android:orientation="horizontal"  
-        android:gravity="center" android:padding="5px" android:id="@+id/Background" android:onClick="onClick">
+        android:gravity="center" android:padding="5dp" android:id="@+id/Background" android:onClick="onClick">
         
     
                 <LinearLayout
                     android:id="@+id/Wrap"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:orientation="vertical" 
-                    android:padding="1px" 
+                    android:padding="1dp"
                     style="@style/border"
                     
                     >
