Add share button to options menu

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,39 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/horisontalpager"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/horisontalpager"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
     <LinearLayout style="@style/background"
-    	
-        android:layout_height="fill_parent"
-        android:weightSum="1" android:layout_width="fill_parent" 
-        android:baselineAligned="true" android:orientation="horizontal"  
-        android:gravity="center" android:padding="5dp" android:id="@+id/Background" android:onClick="onClick">
-        
-    
-                <LinearLayout
-                    android:id="@+id/Wrap"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:orientation="vertical" 
-                    android:padding="1dp"
-                    style="@style/border"
-                    
-                    >
-                    <TextView android:textAppearance="?android:attr/textAppearanceMedium"
-                    	style="@style/text"
-                    	android:id="@+id/TextView1" 
-                    	android:editable="false" 
-                    	android:onClick="onClick" android:text="@string/text" android:clickable="false" 
-                    	 
-                    	android:gravity="center|center_vertical" 
-                    	android:layout_width="match_parent" 
-                    	android:layout_height="wrap_content" 
-                    	 
-                    	android:shadowColor="#444" 
-                    	android:shadowRadius="0"></TextView>
-                </LinearLayout>
-    
-        
+
+                  android:layout_height="fill_parent"
+                  android:weightSum="1" android:layout_width="fill_parent"
+                  android:baselineAligned="true" android:orientation="horizontal"
+                  android:gravity="center" android:padding="5dp" android:id="@+id/Background" android:onClick="onClick">
+
+
+        <LinearLayout
+                android:id="@+id/Wrap"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:orientation="vertical"
+                android:padding="1dp"
+                style="@style/border"
+
+                >
+            <TextView android:textAppearance="?android:attr/textAppearanceMedium"
+                      style="@style/text"
+                      android:id="@+id/TextView1"
+                      android:editable="false"
+                      android:onClick="onClick"
+                      android:text="@string/text"
+                      android:clickable="false"
+                      android:gravity="center|center_vertical"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+
+                      android:shadowColor="#444"
+                      android:shadowRadius="0"/>
+        </LinearLayout>
+
+
     </LinearLayout>
 </LinearLayout>
